--- a/exercises/TD03_fonctions/03_fonctions.ipynb
+++ b/exercises/TD03_fonctions/03_fonctions.ipynb
@@ -70,6 +70,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def afficheTemps(temps): \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#fonction auxiliaire ici\n",
     "\n",
     "def afficheTemps(temps):\n",
@@ -315,7 +325,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[ ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste1 = [3,6,9,5]\n",
+    "liste2 = [1,2,9]\n",
+    "\n",
+    "def longueur(liste1,liste2):\n",
+    "    if len(liste1)==len(liste2):\n",
+    "        print(\"les listes sont de meme longueur ont peut les sommers\")\n",
+    "\n",
+    "    else:\n",
+    "        len(liste1) != len(liste2)\n",
+    "        print(\"les listes ne sont pas de meme longueur on ne peut les sommer\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste1= [2,6]\n",
+    "print(len(liste1))"
+   ]
   }
  ],
  "metadata": {
@@ -334,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
