--- a/exercises/TD04_listes/04_listes.ipynb
+++ b/exercises/TD04_listes/04_listes.ipynb
@@ -22,10 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [3,5,10]\n",
+    "tomate = liste\n",
+    "print(tomate)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,10 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 10, 12, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste.extend([12,17])\n",
+    "print(liste)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,7 +76,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[ ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, -7, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste.remove(10)\n",
+    "liste[2]= -7\n",
+    "print(liste)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,6 +341,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " [ ]liste imbriqué =des liste dans une liste\n",
+    "dans la liste imbriqué on ne peut pas juste utilisé copy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4, 14, 15, 1], [9, 7, 6, 12], [5, 11, 10, 8], [16, 2, 3, 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "carre_mag = [[4,14,15,1], [9,7,6,12], [5,11,10,8], [16,2,3,13]]\n",
+    "print(carre_mag)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,10 +376,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "carre_pas_mag = carre_mag.copy()\n",
+    "\"\"\"pas possible pour les listes imbrique\"\"\"\n",
+    "carre_pas_mag = [list(l) for l in carre_mag] #methode liste en comprehension\n",
+    "carre_pas_mag[3][2] = 7"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "4. Créer une fonction qui affiche la liste comme un carré."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 14, 15, 1]\n",
+      "[9, 7, 6, 12]\n",
+      "[5, 11, 10, 8]\n",
+      "[16, 2, 3, 13]\n",
+      "\n",
+      "[4, 14, 15, 1]\n",
+      "[9, 7, 6, 12]\n",
+      "[5, 11, 10, 8]\n",
+      "[16, 2, 7, 13]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def afficheCarre(carre):\n",
+    "    \"\"\" Affiche la liste à 2 dimensions carre comme un carré\"\"\"\n",
+    "    for l in carre:\n",
+    "        print(l)\n",
+    "    print()\n",
+    "\n",
+    "afficheCarre(carre_mag)\n",
+    "afficheCarre(carre_pas_mag)\n"
    ]
   },
   {
@@ -321,7 +438,9 @@
     "    pass\n",
     "\n",
     "afficheCarre(carre_mag)\n",
-    "afficheCarre(carre_pas_mag)\n"
+    "afficheCarre(carre_pas_mag)\n",
+    "\n",
+    "--> cours !"
    ]
   },
   {
@@ -329,6 +448,34 @@
    "metadata": {},
    "source": [
     "5. Ecrire une fonction qui teste si les lignes du carré ont toutes la même somme. Cette fonction renvoie cette somme si c'est le cas, et `-1` sinon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def testLignesEgales(carre):\n",
+    "    \"\"\" Renvoie la somme des éléments d'une ligne de la liste 2D carre si toutes les lignes ont la même somme, et -1 sinon \"\"\"\n",
+    "    som = sum(carre[0])\n",
+    "    for l in carre:\n",
+    "        if sum(l) != som:\n",
+    "            return -1\n",
+    "    return som\n",
+    "\n",
+    "\n",
+    "print(testLignesEgales(carre_mag))\n",
+    "print(testLignesEgales(carre_pas_mag))\n"
    ]
   },
   {
@@ -342,7 +489,9 @@
     "    pass\n",
     "\n",
     "print(testLignesEgales(carre_mag))\n",
-    "print(testLignesEgales(carre_pas_mag))\n"
+    "print(testLignesEgales(carre_pas_mag))\n",
+    "\n",
+    "--> cours"
    ]
   },
   {
@@ -363,6 +512,38 @@
     "    pass\n",
     "\n",
     "print(testColonnesEgales(carre_mag))\n",
+    "print(testColonnesEgales(carre_pas_mag))\n",
+    "\n",
+    "cours !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def testColonnesEgales(carre):\n",
+    "    \"\"\" Renvoie la somme des éléments d'une colonne de la liste 2D carre si toutes les colonnes ont la même somme, et -1 sinon \"\"\"\n",
+    "    col = [l[0] for l in carre]\n",
+    "    som = sum(col)\n",
+    "    for i in range(1, len(carre)):\n",
+    "       col= [l[i] for l in carre]\n",
+    "       if sum(col) != som:\n",
+    "           return -1\n",
+    "    return som\n",
+    "\n",
+    "\n",
+    "print(testColonnesEgales(carre_mag))\n",
     "print(testColonnesEgales(carre_pas_mag))"
    ]
   },
@@ -375,6 +556,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'l' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-61609c8ff127>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtestDiagonalesEgales\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcarre_mag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtestDiagonalesEgales\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcarre_pas_mag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-46-61609c8ff127>\u001b[0m in \u001b[0;36mtestDiagonalesEgales\u001b[0;34m(carre)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtestDiagonalesEgales\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcarre\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\" Renvoie la somme des éléments d'une diagonale de la liste 2D carre si les 2 diagonales ont la même somme, et -1 sinon \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mdiag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0msom2\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcarre\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'l' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -384,7 +585,9 @@
     "    pass\n",
     "\n",
     "print(testDiagonalesEgales(carre_mag))\n",
-    "print(testDiagonalesEgales(carre_pas_mag))"
+    "print(testDiagonalesEgales(carre_pas_mag))\n",
+    "\n",
+    "cours !\n"
    ]
   },
   {
@@ -399,13 +602,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def estCarreMagique(carre):\n",
     "    \"\"\" Renvoie True si c'est un carre magique et False sinon\"\"\"\n",
     "    pass\n",
     "\n",
     "print(estCarreMagique(carre_mag))\n",
-    "print(estCarreMagique(carre_pas_mag))"
+    "print(estCarreMagique(carre_pas_mag))\n",
+    "\n",
+    "cours !"
    ]
   },
   {
@@ -447,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
