--- a/exercises/TD05_gui/05_gui.ipynb
+++ b/exercises/TD05_gui/05_gui.ipynb
@@ -276,6 +276,23 @@
    "source": [
     "Ecrire l'expression qui donne le dernier chiffre du nombre référencé par la variable `a`."
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "def"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
