--- a/cours/01_prise_en_main/01_premiers_pas.ipynb
+++ b/cours/01_prise_en_main/01_premiers_pas.ipynb
@@ -1162,13 +1162,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "s1 = \"hello\"\n",
     "s2 = 'world'\n",
@@ -1188,13 +1196,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworld\n",
+      "5\n",
+      "False\n",
+      "False\n",
+      "HELLO\n"
+     ]
+    }
+   ],
    "source": [
     "print(s1 + s2)\n",
     "print(len(s1))\n",
