--- a/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
+++ b/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
@@ -1374,6 +1374,64 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellohellohello\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello\"\n",
+    "print(a*3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-38-46bd0559ee47>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-46bd0559ee47>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for i in range(1,4):\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#saisir 3 nombres entiers\n",
+    "i = int(input(\"saisir 3 nombres entiers\")\n",
+    "\n",
+    "for i in range(1,4):\n",
+    "  print(\"i =\", i)\n",
+    "print(\"terminé\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Votre candidature n'a pas été acceptée.\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = int(input(\"saisir un nombre entier\""
+   ]
   }
  ],
  "metadata": {
@@ -1393,7 +1451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
