--- a/cours/01_prise_en_main/01_premiers_pas.ipynb
+++ b/cours/01_prise_en_main/01_premiers_pas.ipynb
@@ -1584,7 +1584,7 @@
  "metadata": {
   "celltoolbar": "Diaporama",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.5 64-bit ('base': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -1599,6 +1599,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "294a1c6647c03d231a3ea6f6614276803fa69164ef0f028746f59d0ba435ef9a"
+   }
   }
  },
  "nbformat": 4,
